'提交本地代码并且获取最新代码'

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>business-service</module>
         <module>convergent-service</module>
         <module>open-component</module>
+        <module>job</module>
     </modules>
 
     <dependencyManagement>
